tg-2914 fix estilos triage adulto ginecologico

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.scss
@@ -8,3 +8,17 @@ form {
 .mat-action-row {
 	@include form-buttons;
 }
+
+h4 {
+	font-weight: 500;
+	font-size: medium;
+}
+
+.page {
+	width: 100%;
+	max-width: 500px;
+}
+
+section {
+	margin: 1.5vh 0;
+}
