--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/adult-gynecological-triage/adult-gynecological-triage.component.html
@@ -1,78 +1,85 @@
-<div fxLayout="column">
-	<app-triage (onTriageCategoryIdChange)="setTriageCategoryId($event)"
-		(onDoctorsOfficeIdChange)="setDoctorsOfficeId($event)">
-	</app-triage>
+<div class="page" fxLayout="column">
+	<form [formGroup]="adultGynecologicalForm" fxLayout="column">
+		<section id="triage">
+			<app-triage (onTriageCategoryIdChange)="setTriageCategoryId($event)"
+						(onDoctorsOfficeIdChange)="setDoctorsOfficeId($event)">
+			</app-triage>
+		</section>
 
-	<h3 class="page-title" [translate]="'guardia.triage.VITAL_SIGNS'"></h3>
-	<form [formGroup]="adultGynecologicalForm" fxLayout="column" fxFlex="grow shrink initial">
-		<div fxLayout="row" fxLayoutGap="20px">
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
-				<input matInput type="number" id="heartRate" name="heartRate" formControlName="heartRate"
-					placeholder="{{'guardia.triage.HEART_RATE' | translate }}">
-				<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'heartRate')"
-					[translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
-				<input matInput type="number" id="respiratoryRate" name="respiratoryRate"
-					formControlName="respiratoryRate" placeholder="{{'guardia.triage.RESPIRATORY_RATE' | translate }}">
-					<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'respiratoryRate')"
-					[translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-			</mat-form-field>
-		</div>
-		<div fxLayout="row" fxLayoutGap="20px">
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
-				<input matInput type="number" id="temperature" name="temperature" formControlName="temperature"
-					placeholder="{{'guardia.triage.TEMPERATURE' | translate }}">
-					<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'temperature')"
-					[translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
-				<input matInput type="number" id="bloodOxygenSaturation" name="bloodOxygenSaturation"
-					formControlName="bloodOxygenSaturation"
-					placeholder="{{'guardia.triage.OXYGEN_SATURATION' | translate }}">
-					<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'bloodOxygenSaturation')"
-					[translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-			</mat-form-field>
-		</div>
-		<div fxLayout="row" fxLayoutGap="20px">
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'guardia.triage.SYSTOLIC_BLOOD'"></mat-label>
-				<input matInput type="number" id="systolicBloodPressure" name="systolicBloodPressure"
-					formControlName="systolicBloodPressure"
-					placeholder="{{'guardia.triage.SYSTOLIC_BLOOD' | translate }}" >
-					<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'systolicBloodPressure')"
-					[translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label [translate]="'guardia.triage.DIASTOLIC_BLOOD'"></mat-label>
-				<input matInput type="number" id="diastolicBloodPressure" name="diastolicBloodPressure"
-					formControlName="diastolicBloodPressure"
-					placeholder="{{'guardia.triage.DIASTOLIC_BLOOD' | translate }}">
-					<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'diastolicBloodPressure')"
-					[translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
-			</mat-form-field>
-		</div>
+		<section id="vital-signs" fxLayout="column">
+			<h4 [translate]="'guardia.triage.VITAL_SIGNS'"></h4>
+			<div fxLayout="column" fxFlex="grow shrink initial">
+				<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
+					<mat-form-field fxFlex="50%" appearance="outline">
+						<mat-label [translate]="'guardia.triage.HEART_RATE'"></mat-label>
+						<input matInput type="number" id="heartRate" name="heartRate" formControlName="heartRate"
+							   placeholder="{{'guardia.triage.HEART_RATE' | translate }}">
+						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'heartRate')"
+								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
+					</mat-form-field>
+					<mat-form-field fxFlex="50%" appearance="outline">
+						<mat-label [translate]="'guardia.triage.RESPIRATORY_RATE'"></mat-label>
+						<input matInput type="number" id="respiratoryRate" name="respiratoryRate"
+							   formControlName="respiratoryRate"
+							   placeholder="{{'guardia.triage.RESPIRATORY_RATE' | translate }}">
+						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'respiratoryRate')"
+								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
+					</mat-form-field>
+				</div>
+				<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
+					<mat-form-field fxFlex="50%" appearance="outline">
+						<mat-label [translate]="'guardia.triage.TEMPERATURE'"></mat-label>
+						<input matInput type="number" id="temperature" name="temperature" formControlName="temperature"
+							   placeholder="{{'guardia.triage.TEMPERATURE' | translate }}">
+						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'temperature')"
+								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
+					</mat-form-field>
+					<mat-form-field fxFlex="50%" appearance="outline">
+						<mat-label [translate]="'guardia.triage.OXYGEN_SATURATION'"></mat-label>
+						<input matInput type="number" id="bloodOxygenSaturation" name="bloodOxygenSaturation"
+							   formControlName="bloodOxygenSaturation"
+							   placeholder="{{'guardia.triage.OXYGEN_SATURATION' | translate }}">
+						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'bloodOxygenSaturation')"
+								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
+					</mat-form-field>
+				</div>
+				<div fxLayout="row" fxFlex="100%" fxLayoutGap="20px">
+					<mat-form-field fxFlex="50%" appearance="outline">
+						<mat-label [translate]="'guardia.triage.SYSTOLIC_BLOOD'"></mat-label>
+						<input matInput type="number" id="systolicBloodPressure" name="systolicBloodPressure"
+							   formControlName="systolicBloodPressure"
+							   placeholder="{{'guardia.triage.SYSTOLIC_BLOOD' | translate }}">
+						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'systolicBloodPressure')"
+								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
+					</mat-form-field>
+					<mat-form-field fxFlex="50%" appearance="outline">
+						<mat-label [translate]="'guardia.triage.DIASTOLIC_BLOOD'"></mat-label>
+						<input matInput type="number" id="diastolicBloodPressure" name="diastolicBloodPressure"
+							   formControlName="diastolicBloodPressure"
+							   placeholder="{{'guardia.triage.DIASTOLIC_BLOOD' | translate }}">
+						<mat-error *ngIf="hasError(adultGynecologicalForm, 'min', 'diastolicBloodPressure')"
+								   [translate]="'forms.MIN_ERROR'" [translateParams]="{min: minValue}"></mat-error>
+					</mat-form-field>
+				</div>
+			</div>
+		</section>
 
-		<h3 class="page-title" [translate]="'guardia.triage.EVALUATION'"></h3>
-		<div fxLayout="row">
-			<mat-form-field appearance="outline">
-				<textarea matInput placeholder="Descripción" formControlName="evaluation" name="evaluation"></textarea>
+		<section id="evaluation" fxLayout="column">
+			<h4 [translate]="'guardia.triage.EVALUATION'"></h4>
+				<mat-form-field fxFlex="100%" appearance="outline">
+				<textarea matInput placeholder="Descripción" formControlName="evaluation"
+						  name="evaluation"></textarea>
 			</mat-form-field>
-		</div>
+		</section>
 
 	</form>
 
-	<mat-action-row>
+	<div fxLayoutGap="10px" fxLayout="row" fxLayoutAlign="flex-end">
 		<button mat-stroked-button class="uppercase" (click)="back()">
 			<span [translate]="cancelLabel"></span>
 		</button>
 		<button mat-raised-button class="uppercase" color="primary" matBadgeColor="accent" (click)="confirm()">
 			<span [translate]="confirmLabel"></span>
 		</button>
-	</mat-action-row>
-
+	</div>
 </div>
