tg-2914 fix estilos triage administrativo

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/administrative-triage/administrative-triage.component.scss
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/administrative-triage/administrative-triage.component.scss
@@ -1,5 +1,13 @@
-@import '../../../../../../../assets/styles/mixins';
+section {
+	margin: 1.5vh 0;
+}
 
-.mat-action-row {
-	@include form-buttons;
+.page {
+	width: 100%;
+	max-width: 500px;
+}
+
+.simple-form-field {
+	width: 60%;
+	min-width: 280px;
 }
