--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/new-episode-admin-triage/new-episode-admin-triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/new-episode-admin-triage/new-episode-admin-triage.component.html
@@ -1,10 +1,13 @@
 <app-content width="full">
-	<section>
-		<h2 class="page-title" [translate]="'guardia.new-episode.TITLE'"></h2>
-		<h4 class="page-title" [translate]="'guardia.new-episode.SUB_TITLE'"></h4>
-		<h3 class="page-title" [translate]="'guardia.new-episode.ADM_TRIAGE'"></h3>
-		<app-administrative-triage (onConfirm)="confirmEvent($event)"
-		                           (onCancel)="cancelEvent()"></app-administrative-triage>
-
+	<section fxLayout="column" fxLayoutGap="50px">
+		<div>
+			<h2 class="page-title" [translate]="'guardia.new-episode.TITLE'"></h2>
+			<h4 [translate]="'guardia.new-episode.SUB_TITLE'"></h4>
+		</div>
+		<div>
+			<h3 [translate]="'guardia.new-episode.ADM_TRIAGE'"></h3>
+			<app-administrative-triage (onConfirm)="confirmEvent($event)"
+									   (onCancel)="cancelEvent()"></app-administrative-triage>
+		</div>
 	</section>
 </app-content>
