tg-2914 ajusta estilos de triage basico

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage/triage.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage/triage.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="triageForm" fxLayout="column" fxFlex="grow shrink initial">
-	<mat-form-field appearance="outline">
+<form [formGroup]="triageForm" class="page" fxLayout="column" fxFlex="grow shrink initial">
+	<mat-form-field class="simple-form-field" appearance="outline">
 		<mat-label [translate]="'guardia.triage.LEVEL'"></mat-label>
 		<mat-select formControlName="triageCategoryId">
 			<mat-option id="triageCategoryId"
@@ -9,7 +9,7 @@
 			</mat-option>
 		</mat-select>
 	</mat-form-field>
-	<mat-form-field appearance="outline">
+	<mat-form-field class="simple-form-field" appearance="outline">
 		<mat-label [translate]="'guardia.triage.ROOM'"></mat-label>
 		<mat-select formControlName="doctorsOfficeId">
 			<mat-option id="doctorsOfficeId"
