tg-3041 [FE] Corrige permiso de para prescribir medicamentos a rol especialistas médicos

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
@@ -3,7 +3,7 @@
 </ng-template>
 <app-summary-card id="medicacion"	[header]="medicacion"
                                     [editable]="true"
-                                    [canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
+                                    [canEdit]="['ESPECIALISTA_MEDICO']"
 									(openInNew)="openDialogNewMedication(true)">
 
 	<div class="header-filters" fxLayout="row" fxLayoutGap="15px">
