--- a/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
+++ b/front-end/webapp/src/app/modules/home/routes/settings/settings.component.html
@@ -6,14 +6,12 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_1'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.logotipo.IMAGE_FORMAT'"></span>
-            <div>
-                <button (click)="fileInput.click()" mat-raised-button color="primary">
-                    <mat-icon>attach_file</mat-icon>
-                    {{'configuracion.logos.UPLOAD_FILE' | translate}}
-                </button>
-                <span [hidden]="true">
-                    <input type="file" #fileInput multiple />
-                </span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 512, height: 128}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, 'sponsor_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('sponsor_logo.png')"></button>
             </div>
         </div>
 
@@ -21,19 +19,91 @@
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_2'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.DESCRIPTION'"></span>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_pagina.IMAGE_FORMAT'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE"
+                                    [validations]="{acceptFormat: '.ico', width: 512, height: 512}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, 'favicon.ico')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('favicon.ico')"></button>
+            </div>
         </div>
 
         <div fxLayout="column" fxLayoutGap="10px">
             <h2 class="mat-title" [translate]="'configuracion.logos.SUBTITLE_3'"></h2>
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.DESCRIPTION'"></span>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_72'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 72, height: 72}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '72x72_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('72x72_logo.png')"></button>
+            </div>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_96'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 96, height: 96}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '96x96_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('96x96_logo.png')"></button>
+            </div>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_128'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 128, height: 128}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '128x128_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('128x128_logo.png')"></button>
+            </div>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_144'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 144, height: 144}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '144x144_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('144x144_logo.png')"></button>
+            </div>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_152'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 152, height: 152}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '152x152_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('152x152_logo.png')"></button>
+            </div>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_192'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 192, height: 192}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '192x192_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('192x192_logo.png')"></button>
+            </div>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_384'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 384, height: 384}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '384x384_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('384x384_logo.png')"></button>
+            </div>
+
             <span mat-line class="mat-body" [translate]="'configuracion.logos.icono_escritorio.IMAGE_FORMAT_512'"></span>
+            <div fxLayout="row" fxLayoutGap="15px">
+                <app-img-uploader buttonLabel="configuracion.logos.UPLOAD_FILE" 
+                                    [validations]="{acceptFormat: '.png', width: 512, height: 512}"
+                                    icon="attach_file"
+                                    (onSelectFiles)="selectFile($event, '512x512_logo.png')"></app-img-uploader>
+                <button mat-raised-button color="warn" translate="configuracion.logos.RESTORE" (click)="restore('512x512_logo.png')"></button>
+            </div>
+
         </div>
         
     </section>
