tg-2941 [Mejora] Falta borde del lado derecho de la tabla (no se pierde ningún dato)

--- a/back-end/hospital-api/src/main/resources/templates/fragments/recipe_order_fragment_table.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/recipe_order_fragment_table.html
@@ -11,10 +11,9 @@
     <style>
         table {
             font-size:12px;
-            width: 700px;
+            width: 650px;
             table-layout:fixed;
-            margin-bottom: 40px;
-            margin-top: 30px;
+            margin: 30px auto 40px auto;
         }
         table, th, td {
             border: 1px solid black;
