tg-3055 [P2] Corrige NULL en volver a recetar medicación activa cuando no tiene todos los datos

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/nueva-prescripcion/nueva-prescripcion.component.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <span class="mat-body-1" *ngIf="data.addPrescriptionItemDialogData.showStudyCategory">{{prescriptionItem.studyCategory.description}}</span>
-            <span class="mat-body-1" *ngIf="data.addPrescriptionItemDialogData.showDosage">{{getDosage(prescriptionItem)}}</span>
+            <span class="mat-body-1" *ngIf="data.addPrescriptionItemDialogData.showDosage && isDailyMedication(prescriptionItem)">{{getDosage(prescriptionItem)}}</span>
             <h3 class="mat-subheading-2 capitalize-first-letter color-primary">{{prescriptionItem.healthProblem.description}}</h3>
             <span class="mat-body-1" *ngIf="prescriptionItem.observations">{{prescriptionItem.observations}}</span>
         </div>
