--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/routes/home/home.component.html
@@ -30,7 +30,7 @@
 							<div id="patient" fxFlex="40%" fxLayout="row">
 								<mat-card-header>
 									<img mat-card-avatar
-										 [src]="episode.patient?.person?.decodedPhoto$ | async"
+										 [src]="episode.decodedPatientPhoto | async"
 										 onerror="this.src='../../../../../assets/images/empty-profile.png'">
 									<mat-card-title>
 										<span *ngIf="!episode.patient else patientInfo">
