tg-3075 [FE] Ocultar Card de Indicaciones - Ordenes

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/ordenes.component.html
@@ -7,7 +7,7 @@
 			</div>
 			<div fxFlex="50%" fxLayoutGap="20px">
 				<app-card-estudios [patientId]="patientId"></app-card-estudios>
-				<app-card-indicaciones [patientId]="patientId"></app-card-indicaciones>
+				<app-card-indicaciones [patientId]="patientId" *ngIf="false"></app-card-indicaciones>
 			</div>
 		</div>
 	</section>
