tg-3076 [P1] Error 403 al accionar sobre medicamentos / estudios

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
@@ -53,54 +53,67 @@
 	</div>
 	<mat-divider></mat-divider>
 
-    <div *ngIf="medicationsInfo?.length" class="header-filters" fxLayout="row" fxLayoutGap="15px">
-        <div class="checkbox-div-header" fxFlex="5%">
-            <mat-checkbox (change)="selectAllMedication($event.checked)"></mat-checkbox>
-        </div>
+	<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+		<div *ngIf="medicationsInfo?.length" class="header-filters" fxLayout="row" fxLayoutGap="15px">
+			<div class="checkbox-div-header" fxFlex="5%">
+				<mat-checkbox (change)="selectAllMedication($event.checked)"></mat-checkbox>
+			</div>
 
-        <div fxFlex="95%">
-            <button mat-button class="element-light-color" (click)="openDialogNewMedication(false)">
-                <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
-            </button>
-            <button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.ACTIVE.id)" (click)="openSuspendMedicationDialog()">
-                <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
-            </button>
-            <button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.STOPPED.id)" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE)">
-                <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
-            </button>
-        </div>
-	</div>
+			<div fxFlex="95%">
+				<button mat-button class="element-light-color" (click)="openDialogNewMedication(false)">
+					<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
+				</button>
+				<button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.ACTIVE.id)" (click)="openSuspendMedicationDialog()">
+					<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
+				</button>
+				<button mat-button class="element-light-color" *ngIf="checkMedicationStatus(MEDICATION_STATUS.STOPPED.id)" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE)">
+					<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
+				</button>
+			</div>
+		</div>
+	</ng-container>
+
     <form [formGroup]="medicationCheckboxes">
         <mat-list id="lista-medication" *ngIf="medicationsInfo?.length > 0 else noInfo">
             <div formArrayName="checkboxArray">
                 <div fxLayout="row" *ngFor="let medicationInfo of medicationsInfo; let i=index" [formGroupName]="i">
                     <div class="item-padding" fxFlex="100%" fxLayout="row" fxLayoutGap="15px">
 
-                        <div class="checkbox-div-body" fxFlex="5%">
+                        <div *hasRole="['ESPECIALISTA_MEDICO']" class="checkbox-div-body" fxFlex="5%">
                             <mat-checkbox formControlName="checked" (change)="checkMedication($event.checked, medicationInfo)"></mat-checkbox>
                         </div>
 
-                        <app-item-prescripciones fxFlex="95%" mat-list-item [prescriptionItemData]="prescriptionItemDataBuilder(medicationInfo)">
+                        <app-item-prescripciones fxFlex="100%" mat-list-item [prescriptionItemData]="prescriptionItemDataBuilder(medicationInfo)">
                             <div actions>
-                                <button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="true">
+                                <button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="hasActionsMenu(medicationInfo)">
                                     <mat-icon>more_vert</mat-icon>
                                 </button>
                                 <mat-menu #menu="matMenu">
-                                    <button mat-menu-item *ngIf="medicationInfo.hasRecipe && medicationInfo.medicationRequestId" (click)="downloadRecipe(medicationInfo.medicationRequestId)">
-                                        <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD'"></span>
-                                    </button>
-                                    <button mat-menu-item (click)="openDialogNewMedication(false, medicationInfo)">
-                                        <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
-                                    </button>
-                                    <button mat-menu-item *ngIf="medicationInfo.statusId === MEDICATION_STATUS.ACTIVE.id" (click)="openSuspendMedicationDialog(medicationInfo)">
-                                        <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
-                                    </button>
-                                    <button mat-menu-item *ngIf="medicationInfo.statusId === MEDICATION_STATUS.SUSPENDED.id" (click)="changeMedicationStatus(medicationStatusChange.REACTIVATE, medicationInfo)">
-                                        <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.REACTIVATE'"></span>
-                                    </button>
-                                    <button mat-menu-item *ngIf="medicationInfo.statusId !== MEDICATION_STATUS.STOPPED.id" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE, medicationInfo)">
-                                        <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
-                                    </button>
+									<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO', 'PROFESIONAL_DE_SALUD']">
+										<button mat-menu-item *ngIf="medicationInfo.hasRecipe && medicationInfo.medicationRequestId" (click)="downloadRecipe(medicationInfo.medicationRequestId)">
+											<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD'"></span>
+										</button>
+									</ng-container>
+									<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+										<button mat-menu-item (click)="openDialogNewMedication(false, medicationInfo)">
+											<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.RE_PRESCRIBE'"></span>
+										</button>
+									</ng-container>
+									<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+										<button mat-menu-item *ngIf="medicationInfo.statusId === MEDICATION_STATUS.ACTIVE.id" (click)="openSuspendMedicationDialog(medicationInfo)">
+											<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SUSPEND'"></span>
+										</button>
+									</ng-container>
+									<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+										<button mat-menu-item *ngIf="medicationInfo.statusId === MEDICATION_STATUS.SUSPENDED.id" (click)="changeMedicationStatus(medicationStatusChange.REACTIVATE, medicationInfo)">
+											<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.REACTIVATE'"></span>
+										</button>
+									</ng-container>
+									<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+										<button mat-menu-item *ngIf="medicationInfo.statusId !== MEDICATION_STATUS.STOPPED.id" (click)="changeMedicationStatus(medicationStatusChange.FINALIZE, medicationInfo)">
+											<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.FINALIZE'"></span>
+										</button>
+									</ng-container>
                                 </mat-menu>
                             </div>
 
