--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-estudios/card-estudios.component.html
@@ -4,7 +4,7 @@
 </ng-template>
 <app-summary-card id="estudios" [header]="estudios"
                                 [editable]="true"
-                                [canEdit]="['ENFERMERO', 'ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD']"
+                                [canEdit]="['ESPECIALISTA_MEDICO']"
 								(openInNew)="openDialogNewStudy()">
 
 	<div class="header-filters" fxLayout="row" fxLayoutGap="15px">
@@ -73,18 +73,26 @@
                         <mat-icon>more_vert</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-						<button mat-menu-item (click)="downloadOrder(diagnosticReport.serviceRequestId)">
-							<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD_STUDY'"></span>
-						</button>
-                        <button mat-menu-item (click)="completeStudy(diagnosticReport)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
-                            <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.COMPLETE'"></span>
-                        </button>
-                        <button mat-menu-item (click)="deleteStudy(diagnosticReport.id)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
-                            <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DELETE'"></span>
-                        </button>
-                        <button mat-menu-item (click)="showStudyResults(diagnosticReport)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.FINAL.id">
-                            <span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SHOW_RESULTS'"></span>
-                        </button>
+						<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO', 'PROFESIONAL_DE_SALUD']">
+							<button mat-menu-item (click)="downloadOrder(diagnosticReport.serviceRequestId)">
+								<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD_STUDY'"></span>
+							</button>
+						</ng-container>
+						<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+							<button mat-menu-item (click)="completeStudy(diagnosticReport)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
+								<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.COMPLETE'"></span>
+							</button>
+						</ng-container>
+						<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+							<button mat-menu-item (click)="deleteStudy(diagnosticReport.id)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.REGISTERED.id">
+								<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DELETE'"></span>
+							</button>
+						</ng-container>
+						<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO', 'PROFESIONAL_DE_SALUD']">
+							<button mat-menu-item (click)="showStudyResults(diagnosticReport)" *ngIf="diagnosticReport.statusId === STUDY_STATUS.FINAL.id">
+								<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.SHOW_RESULTS'"></span>
+							</button>
+						</ng-container>
                     </mat-menu>
                 </div>
 
