tg-3082 Fix Lint Rule: no-input-rename, no-output-rename, no-unused-expression, only-arrow-functions y radix

--- a/front-end/webapp/src/app/modules/historia-clinica/components/signos-vitales-summary/signos-vitales-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/signos-vitales-summary/signos-vitales-summary.component.html
@@ -6,8 +6,8 @@
 	<mat-card-content>
 		<div fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.xs="center center" fxLayout.xs="column">
 			<app-signo-vital-current-previous
-				*ngFor="let signoVital of signosVitales"
-				[data]="signoVital">
+				*ngFor="let vitalSign of signosVitales"
+				[vitalSign]="vitalSign">
 			</app-signo-vital-current-previous>
 		</div>
 	</mat-card-content>
