--- a/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/guardia/components/triage-details/triage-details.component.html
@@ -97,7 +97,7 @@
 			<div fxLayout="row wrap">
 				<app-signo-vital-current-previous
 						*ngFor="let vitalSign of vitalSignsCurrent"
-						[data]="vitalSign">
+						[vitalSign]="vitalSign">
 				</app-signo-vital-current-previous>
 			</div>
 		</div>
