--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
@@ -124,8 +124,8 @@
 								<input id="heart_rate" name="heart_rate" formControlName="value" placeholder="00"
 									type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [model]="form.value.vitalSigns.heartRate.effectiveTime"
-								(onChange)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.heartRate.effectiveTime"
+								(update)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="respiratoryRate">
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.RESPIRATORY_RATE'">
@@ -134,8 +134,8 @@
 								<input id="respiratory_rate" name="respiratory_rate" formControlName="value"
 									placeholder="00" type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [model]="form.value.vitalSigns.respiratoryRate.effectiveTime"
-								(onChange)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.respiratoryRate.effectiveTime"
+								(update)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
 						</div>
 					</div>
 
@@ -146,8 +146,8 @@
 								<input id="temperature" name="temperature" formControlName="value" placeholder="00.0"
 									type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [model]="form.value.vitalSigns.temperature.effectiveTime"
-								(onChange)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.temperature.effectiveTime"
+								(update)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="bloodOxygenSaturation">
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.BLOOD_OXYGEN_SATURATION'">
@@ -156,8 +156,8 @@
 								<input id="blood_oxygen_saturation" name="blood_oxygen_saturation"
 									formControlName="value" placeholder="00" type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [model]="form.value.vitalSigns.bloodOxygenSaturation.effectiveTime"
-								(onChange)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')">
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.bloodOxygenSaturation.effectiveTime"
+								(update)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')">
 							</app-effective-time>
 						</div>
 					</div>
@@ -170,8 +170,8 @@
 								<input id="systolic_blood_pressure" name="systolicBloodPressure" formControlName="value"
 									placeholder="00" type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [model]="form.value.vitalSigns.systolicBloodPressure.effectiveTime"
-								(onChange)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')">
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.systolicBloodPressure.effectiveTime"
+								(update)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')">
 							</app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="diastolicBloodPressure">
@@ -182,8 +182,8 @@
 								<input id="diastolic_blood_pressure" name="diastolicBloodPressure"
 									formControlName="value" placeholder="00" type="number" matInput>
 							</mat-form-field>
-							<app-effective-time [model]="form.value.vitalSigns.diastolicBloodPressure.effectiveTime"
-								(onChange)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')">
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.diastolicBloodPressure.effectiveTime"
+								(update)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')">
 							</app-effective-time>
 						</div>
 					</div>
