--- a/front-end/webapp/src/app/modules/historia-clinica/components/antropometricos-summary/antropometricos-summary.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/components/antropometricos-summary/antropometricos-summary.component.html
@@ -4,7 +4,7 @@
 				  [editable]="editable"
 				  (openInNew)="openDialog()">
 	<mat-card-content class="flex-row" *ngIf="details.length > 0 else noInfo">
-		<app-detail-box *ngFor="let detail of details" [data]="detail"></app-detail-box>
+		<app-detail-box *ngFor="let detail of details" [detail]="detail"></app-detail-box>
 	</mat-card-content>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
