--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -156,7 +156,7 @@
 									   type="number"
 									   matInput>
 									</mat-form-field>
-							<app-effective-time	[model]="form.value.vitalSigns.heartRate.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.heartRate.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'heartRate')"></app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="respiratoryRate">
 							<mat-label [translate]="'internaciones.anamnesis.vital-signs.form.RESPIRATORY_RATE'"></mat-label>
@@ -168,7 +168,7 @@
 									   type="number"
 									   matInput>
 							</mat-form-field>
-							<app-effective-time	[model]="form.value.vitalSigns.respiratoryRate.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.respiratoryRate.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'respiratoryRate')"></app-effective-time>
 						</div>
 					</div>
 
@@ -183,7 +183,7 @@
 									   type="number"
 									   matInput>
 							</mat-form-field>
-							<app-effective-time	[model]="form.value.vitalSigns.temperature.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.temperature.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'temperature')"></app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="bloodOxygenSaturation">
 							<mat-label
@@ -196,7 +196,7 @@
 									   type="number"
 									   matInput>
 							</mat-form-field>
-							<app-effective-time	[model]="form.value.vitalSigns.bloodOxygenSaturation.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.bloodOxygenSaturation.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')"></app-effective-time>
 						</div>
 					</div>
 
@@ -212,7 +212,7 @@
 									   type="number"
 									   matInput>
 							</mat-form-field>
-							<app-effective-time	[model]="form.value.vitalSigns.systolicBloodPressure.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.systolicBloodPressure.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'systolicBloodPressure')"></app-effective-time>
 						</div>
 						<div class="field-container" formGroupName="diastolicBloodPressure">
 							<mat-label
@@ -225,7 +225,7 @@
 									   type="number"
 									   matInput>
 							</mat-form-field>
-							<app-effective-time	[model]="form.value.vitalSigns.diastolicBloodPressure.effectiveTime" (onChange)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')"></app-effective-time>
+							<app-effective-time [effectiveTime]="form.value.vitalSigns.diastolicBloodPressure.effectiveTime" (update)="setVitalSignEffectiveTime($event, 'diastolicBloodPressure')"></app-effective-time>
 						</div>
 					</div>
 				</mat-card-content>
