--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
@@ -4,11 +4,7 @@
     </button>
 </div>
 
-<div class="spinner" *ngIf="loading">
-	<mat-spinner color="primary"></mat-spinner>
-</div>
-
-<mat-dialog-actions fxLayout="column" fxLayoutAlign="start center" *ngIf="!loading">
+<mat-dialog-actions fxLayout="column" fxLayoutAlign="start center">
     <div class="icon">
         <mat-icon [inline]="true" class="material-icons-outlined" color="primary">check_circle</mat-icon>
     </div>
