--- a/front-end/webapp/src/app/modules/presentation/components/logo/logo.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/logo/logo.component.html
@@ -1,3 +1,3 @@
-<div class="img-logo-container" *ngFor="let img of logos$ | async">
+<div class="img-logo-container">
 	<img [src]="img.location" [alt]="img.alt">
 </div>
