--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/ordenes/card-medicaciones/card-medicaciones.component.html
@@ -90,7 +90,7 @@
                                 </button>
                                 <mat-menu #menu="matMenu">
 									<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO', 'PROFESIONAL_DE_SALUD']">
-										<button mat-menu-item *ngIf="medicationInfo.hasRecipe && medicationInfo.medicationRequestId" (click)="downloadRecipe(medicationInfo.medicationRequestId)">
+										<button mat-menu-item *ngIf="hasRecipe(medicationInfo)" (click)="downloadRecipe(medicationInfo.medicationRequestId)">
 											<span [translate]="'ambulatoria.paciente.ordenes_prescripciones.menu_items.DOWNLOAD'"></span>
 										</button>
 									</ng-container>
